# gridassetlink.dev

./: .env.example  .gitignore  .vercelignore  AGENTS.md  DATA_SOURCES.md  README.md  docker-compose.yml  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_gis_scale_postgis_schema.py  0003_design_assets_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/auth/: dependencies.py  security.py
backend/app/integrations/: __init__.py  operational_network_api.py
backend/app/integrations/public_grid_sources/: README.md  __init__.py  common.py  csv_grid_importer.py  geojson_importer.py  iso_ne_public_adapter.py  opengridworks_adapter.py  osm_power_adapter.py  shapefile_importer.py
backend/app/jobs/: gis_scale_performance_check.py  synthetic_telecom_generation_worker.py
backend/app/models/: __init__.py  assets.py
backend/app/reports/: __init__.py  saved_reports.py
backend/app/routers/: auth.py  crud.py  dashboard.py  design_assets.py  deviceops.py  gis.py  implementation_guide.py  live_status.py  regional_grid.py  sql.py  workflows.py
backend/app/schemas/: auth.py
backend/app/seed/: regional_seed.py  seed.py
backend/app/services/: audit.py  gis_vector_tiles.py
backend/app/tests/: test_api.py
desktop_client/: README.md  api_client.py  app.py  build_exe.bat  import_tools.py  qr_tools.py
docs/: api.md  architecture.md  database_administration.md  database_schema.md  deployment.md  deviceops.md  (+2 more)
frontend/: Dockerfile  (+2 more)
(+247 files in other folders)
