[project]
name = "telecomne-grid-asset-links-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "sqlmodel==0.0.22",
  "sqlalchemy==2.0.37",
  "alembic==1.14.1",
  "pydantic-settings==2.7.1",
  "psycopg[binary]==3.2.4",
  "python-multipart==0.0.20"
]
